colcon_ws/log/build_2025-04-19_10-57-00/hello_ros/stderr.log
  File "/home/park/testpublic/colcon_ws/install/hello_ros/lib/python3.10/site-packages/hello_ros/hello_ros.py", line 11
    print("hello, ROS2 humble!!  {self.count}"")
                                              ^
SyntaxError: unterminated string literal (detected at line 11)

